# Portfolio-Manager

./: .gitignore  Makefile  README.md  calculate.py
backend/: .gitignore  Makefile  README.md  main.py  pyproject.toml
backend/data/: holdings.json
backend/src/portfolio_manager/: __init__.py  cli.py  config.py  formatting.py  market_data.py  portfolio.py  repository.py  tickers.py  trading.py  transactions.py
backend/tests/: test_transaction.py
test/: transaction_test.py
