[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-manager"
version = "0.1.0"
description = "Portfolio valuation and trading backend"
requires-python = ">=3.11"
dependencies = [
    "yfinance",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
portfolio-manager = "portfolio_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
